# cookiecutter-data-science

./: Makefile  README.md  ccds-help.json  ccds.json  dev-requirements.txt  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: release.yml  test-devcontainer.yml  tests.yml
ccds/: __main__.py  monkey_patch.py
ccds/hook_utils/: dependencies.py
docs/docs/: contributing.md  index.md
docs/scripts/: configuration-table.py  generate-termynal.py
hooks/: post_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: pyproject.toml
